[package]
name = "default-target"
version = "0.1.0"
authors = ["Neocrym Records Inc. <engineering@neocrym.com>"]
edition = "2018"
description = "A command line tool to print the current default Clang/LLVM target triple."
readme = "README.md"
homepage = "https://github.com/neocrym/default-target"
repository = "https://github.com/neocrym/default-target"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
